changed config.toml theme name to reflect name change

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -2,7 +2,7 @@ baseUrl = ""
 title = "Distill Hugo Theme"
 author = "Sanyam Kapoor"
 canonifyurls = true
-theme = "signalskew.com-theme-distillpub"
+theme = "signalskew-theme"
 
 [taxonomies]
 # TODO: Taxonomies?
