--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -7,6 +7,8 @@ theme = "signalskew-theme"
 [taxonomies]
 # TODO: Taxonomies?
 
+staticDir = ['static']
+
 [params]
   description = "Distill Hugo Theme Demo"
   keywords = ["hugo", "distill", "theme"]
@@ -15,19 +17,19 @@ theme = "signalskew-theme"
   color = "#0f2e3d"
 
   [[params.social]]
-  class = "fas fa-user-graduate"
+  class = "fa-solid fa-user-graduate"
   url = "https://scholar.google.com/citations?user=p0NMtgsAAAAJ"
 
   [[params.social]]
-  class = "fab fa-github"
+  class = "fa-brands fa-github"
   url = "https://github.com/activatedgeek"
 
   [[params.social]]
-  class = "fab fa-hacker-news"
+  class = "fa-brands fa-hacker-news"
   url = "https://news.ycombinator.com/user?id=activatedgeek"
 
   [[params.social]]
-  class = "fab fa-linkedin"
+  class = "fa-brands fa-linkedin"
   url = "https://linkedin.com/in/sanyamkapoor"
 
   [[params.social]]
