--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,7 +14,8 @@ staticDir = ['static']
   keywords = ["hugo", "distill", "theme"]
   sourcePrefix = "https://github.com/activatedgeek/distillpub/blob/master/exampleSite"
 
-  color = "#0f2e3d"
+  theme_color = "#0f2e3d"
+  header_metadata = '<a style="display: none;" rel="me" href="https://mastodon/@user">Mastodon</a>'
 
   [[params.social]]
   class = "fa-solid fa-user-graduate"
