--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -15,6 +15,8 @@ staticDir = ['static']
   sourcePrefix = "https://github.com/activatedgeek/distillpub/blob/master/exampleSite"
 
   theme_color = "#0f2e3d"
+  dark_mode_feature = true
+  dark_mode_default = true
   header_metadata = '<a rel="me" href="https://mastodon/@user"></a>'
 
   [[params.social]]
@@ -50,8 +52,8 @@ staticDir = ['static']
 [menu]
 
   [[menu.main]]
-  identifier = "about"
+  identifier = "About"
   name = "About Hugo"
-  title = "about"
+  title = "About"
   url = "/about"
   weight = -10
