Added div to center of ribbon for dark mode toggle

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -17,6 +17,8 @@ staticDir = ['static']
   theme_color = "#0f2e3d"
   dark_mode_feature = true
   header_metadata = '<a rel="me" href="https://mastodon/@user"></a>'
+  social_in_menu = false
+  rss_in_menu = true
 
   [[params.social]]
   class = "fa-solid fa-user-graduate"
