Added more files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@ public
 /themes
 .DS_Store
 
+# Generated files by hugo
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
+
 # Development Related
 .vscode/
 .idea/
